[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain[huggingface]>=1.3.8",
    "langchain-text-splitters>=1.1.2",
    "requests>=2.34.2",
    "langchain-chroma>=1.1.0",
    "sentence-transformers>=5.5.1",
    "pytz>=2026.2",
    "fastapi[standard]>=0.137.2",
    "langgraph>=1.2.4",
    "langchain-community>=0.4.2",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.14.4",
    "pypdf>=6.13.3",
]
